--- a/content-patterns/headings/index.html
+++ b/content-patterns/headings/index.html
@@ -15,38 +15,32 @@ footer: false
       <!-- sticky nav -->
       <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
         <div class="icon-box-small margin-top--3">
-          <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../collection">Return to collection page</a></p>
+          <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../content-patterns">Return to introduction page</a></p>
         </div>
         <div class="">
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
           <ul class="section-contents">
             <li>
-              <a href="#What is a bulletin?">What is a bulletin?</a>
+              <a href="#Headings">Headings</a>
             </li>
             <li>
-              <a href="#what-is-a-collection">What is a collection?</a>
+              <a href="#what-to-write-in-each-section">What to write in each section</a>
             </li>
             <li>
-              <a href="#what-is-an-overview-page">What is an overview page?</a>
-            </li>
-            <li>
-              <a href="#what-is-an-article">What is an article?</a>
-            </li>
-            <li>
-              <a href="#how-to-decide-whether-you-need-more-pages">How to decide whether you need more pages?</a>
+              <a href="#pages-in-this-collection">Pages in this collection</a>
             </li>
           </ul>
 
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this guide:</h2>
           <ul class="section-contents">
             <li>
-              <a href="../Introducing">Introducing Bulletin Content Patterns</a>
-            </li>
-            <li>
               <a href="../Bulletins-collections-articles">Bulletins, collections and articles</a>
             </li>
             <li>
               <a class="font-weight--bold" href="../headings">Headings</a>
+            </li>
+            <li>
+              <a href="../analysis">Analysis</a>
             </li>
           </ul>
         </div>
@@ -57,163 +51,184 @@ footer: false
 
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1 id="Headings">Headings</h1>
-      
-      <h2 id="What is a bulletin?">What is a bulletin?</h2>
-      <p>
-      A bulletin gives headline numbers and commentary, alongside essential quality and methodology information.</p>
-      <p>
-      It should be released with new data, and clearly link to more detailed content for users who want more than an overview.</p>
+        <p>Research shows that our users are most interested in learning about our statistics and analysis of the data.</p>
+        <p>Our research has shown that users come to bulletins to complete tasks; generally, to learn about new data, access new data, or find out how certain data was collected.</p>
+        <p>These headings separate the different types of content on the page to reflect those needs. This helps users to easily complete the tasks they need to.</p>
 
-      <table>
-          <tr>
-           <td><strong>A bulletin should give users</strong></td>
-           <td><strong>A bulletin should not contain</strong>
-           </td>
-          </tr>
-          <tr>
-           <td>An overview of the main findings, and first commentary on newly released data
-           </td>
-           <td>Long-form In-depth commentary
-           </td>
-          </tr>
-          <tr>
-           <td>Links to the new data, and to specific parts of the data which might be useful
-           </td>
-           <td>Deep technical analysis
-           </td>
-          </tr>
-          <tr>
-           <td>A summary of the most important quality and methodology information, linking to more detailed documents where necessary
-           </td>
-           <td>Detailed explanations of upcoming changes, roadmaps, or transformation plans
-           </td>
-          </tr>
-        </table>
-      <br>
-      <p>Where there's a clear user need for long, technical content, consider writing an "article". Bulletins can link to articles. Articles can be released at the same time as a bulletin
-      </p>
-      <p>
-      Bulletins should focus on topics that we know users are interested in. If we know users are interested in a number of topics in a release, we can publish more than one bulletin in a "collection".
-      </p>
+      <h2>Introducing the sections in a bulletin</h2>
+        <p>
+        To make our headings clearer, we use the bulletin topic in our section headings.
 
-      <h2 id="collections">Collections</h2>
+        For example, on the "Employment" page of the Labour Market collection, the headings would look like this:</p>
+        <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
+        <ul class="section-contents">
+          <li>
+            <a href="#analysis">Analysis of employment</a>
+          </li>
+          <li>
+            <a href="#data">Employment data</a>
+          </li>
+          <li>
+            <a href="#using-data">Glossary</a>
+          </li>
+          <li>
+            <a href="#using-data">Measuring this data</a>
+          </li>
+          <li>
+            <a href="#using-data">Strengths and limitations</a>
+          </li>
+          <li>
+            <a href="#more-about">Find out more</a>
+          </li>
+          <li>
+            <a href="#more-links">You may also be interested in</a>
+          </li>
+          <li>
+            <a href="#contact">Contact us</a>
+          </li>
+        </ul>
+    <br>
+    <h3 id="what-to-write-in-each-section">What to write in each section</h3>
+          <table>
+            <tr>
+             <td><strong>Section name</strong>
+             </td>
+             <td><strong>Content focuses on</strong>
+             </td>
+            </tr>
+            <tr>
+             <td>Analysis of employment
+             </td>
+             <td><ul>
 
-          <h3 id="what-is-a-collection">What is a collection?</h3>
-              <p>
-              A collection always contains the following things:
-              </p><ul>
+          <li>Main statistics
+          <li>Commentary about statistics, including essential warnings</li></ul>
 
-              <li>A <strong>dataset</strong>
-              <li>A <strong>summary (bulletin)</strong> page, explaining the most important things about the new version of the dataset</li></ul>
+             </td>
+            </tr>
+            <tr>
+             <td>Employment data
+             </td>
+             <td><ul>
 
-              <p>
-              Where there's a clear user need for more detail on a specific topic (gender pay gap, for example), a collection can contain additional summary pages.
-              </p>
-              <p>
-              An<strong> overview</strong> page contains commentary on the top-level findings from a collection.
-              </p>
-              <p>
-              Where more in-depth analysis is required, <strong>articles</strong> can be added to a collection.
-              </p>
-          <h3 id="what-is-an-overview-page">What is an overview page?</h3>
-              <p>
-              <em>User research found that users like the term overview for this type of page. As "Overview" and "Summary" can be used interchangeably, we're doing more research to find out whether this could be confusing.<br>
-              </em>
-              </p>
-              <p>
-              Where a collection contains more than one summary (bulletin), an overview page summarises the most important information from across all the summary pages.
-              </p>
-              <p>
-              For example, the <strong>Crime collection</strong> may include summaries on Weapons, Fraud, and Homicide.
-              </p>
-              <p>
-              The <strong>Crime overview</strong> would give commentary on what has happened to overall Crime trends in the latest data, and might very briefly explain the main contributors to this change (linking to the summary pages for more detail).
-              </p>
-          <h3 id="what-is-an-article">What is an article?</h3>
-              <p>
-              <em>We are running more research to understand whether the word "article" means anything to users in this context.</em>
-              </p>
-              <p>
-              An article is less structured than a summary, and allows for more detailed information on a subject. Typical articles might include:
-              </p><ul>
+          <li>Summary of data referenced in this bulletin, with links
+          <li>Explains what data is available
+          <li>Explains how detailed the data is</li></ul>
 
-              <li>Deeper analysis of a topic which cannot fit in the summary template
-              <li>Analysis of the latest data alongside other data sources
-              <li>More information about methodology or planned changes to a collection</li></ul>
-              <p>
-              As with any content on our website, there should be a clear user need for everything we publish. The length and detail of an article should be relative to the interest of our users. We will measure this using analytics and through user research.
-              </p>
-              <p>
-              An article should only be used when it is not possible to communicate all of the information users need in a summary page (because of the number of words required, or because the analysis crosses multiple summaries or collections, for example).
-              </p>
-      <h2 id="how-to-decide-whether-you-need-more-pages">How to decide whether you need more pages?</h2>
-              <p>
-              Digital publishing will help you determine whether more pages would add value. We will use search data and user research to understand what users need. We may run extra research, or suggest small-scale experiments we can run to validate the need for a new page.
-              </p>
-              <p>
-              We will also consider:
-              </p><ul>
+             </td>
+            </tr>
+            <tr>
+             <td>Glossary
+             </td>
+             <td><ul>
 
-              <li>whether users might expect to find information about this topic anywhere else (on another page in this collection, or on the ONS website, for example)
-              <li>what the time and effort required to create extra pages is, relative to user need
-              <li>can we communicate this using anything that already exists
-              <li>does it need to be published on the day of release
-              <li>whether this content is best written as an article or a bulletin (summary)</li></ul>
+          <li>Definitions of up to 6 terms used in this bulletin</li></ul>
 
-              <p>
-              Once the page has been published, we will continually monitor its use to understand whether there is a continuing user need for this content.
-              </p>
-      {% include accordian.html %}
-      {% include headline.html %}
-      <h2 id="alerts">Alerts</h2>
-      {% include alerts/standard-alert.html %}
-      <br>
-      {% include alerts/info-alert.html %}
-      {% include alerts/warning-text.html %}
-      {% include alerts/latest-not-latest.html %}
-      {% include back-to-top.html %}
-      <h2 id="breadcrumbs">Breadcrumbs</h2>
-      {% include breadcrumbs.html %}
-      {% include back-to-top.html %}
-      <h2 id="charts">Charts</h2>
-      {% include chart.html %}
-      {% include back-to-top.html %}
-      <h2 id="get-all-data">Get all data</h2>
-      {% include get-all-data.html %}
-      {% include back-to-top.html %}
-      <h2 id="headings">Headings</h2>
-      {% include headings.html %}
-      {% include back-to-top.html %}
-      <h2 id="inset-text">Inset text</h2>
-      {% include inset-text.html %}
-      {% include back-to-top.html %}
-      <h2 id="quote">Quote</h2>
-      {% include quote.html %}
-      {% include back-to-top.html %}
-      <h2 id="related-links">Related links</h2>
-      {% include related-links.html %}
-      {% include back-to-top.html %}
-      <h2 id="related-statistics">Related statistics</h2>
-      {% include related-statistics.html %}
-      {% include back-to-top.html %}
-      <h2 id="small-content-box">Small content box</h2>
-      {% include small-content-box.html %}
-      {% include back-to-top.html %}
-      <h2 id="snapshots">Snapshots</h2>
-      {% include snapshot.html %}
-      {% include back-to-top.html %}
-      <h2>Snapshot 2</h2>
-      {% include snapshot2.html %}
-      {% include back-to-top.html %}
-      <h2 id="tables">Tables</h2>
-      {% include tables/example-01.html %}
-      {% include back-to-top.html %}
-      <h2 id="toggle-content">Toggle content</h2>
-      {% include toggle-content.html %}
-      {% include back-to-top.html %}
-      <h2 id="warning-text">Warning text</h2>
-      {% include warning-text.html %}
-      {% include back-to-top.html %}
-    </div>
-  </div>
-</div>
+             </td>
+            </tr>
+            <tr>
+             <td>Measuring this data
+             </td>
+             <td><ul>
+
+          <li>Explains where the data comes from
+          <li>Explains how the data is collected
+          <li>Links to methodology articles, user guides, and roadmap</li></ul>
+
+             </td>
+            </tr>
+            <tr>
+             <td>Strengths and limitations
+             </td>
+             <td><ul>
+
+          <li>Uncertainty about the data
+          <li>How the data should and shouldn't be used
+          <li>Whether any data could be misused
+          <li>Where multiple sources of data are available, which are better for different purposes</li></ul>
+
+             </td>
+            </tr>
+            <tr>
+             <td>Find out more
+             </td>
+             <td><ul>
+
+          <li>Links to more detailed content on this topic, such as technical articles, detailed commentary, or deeper analysis</li></ul>
+
+             </td>
+            </tr>
+            <tr>
+             <td>You may also be interested in
+             </td>
+             <td><ul>
+
+          <li>Links to other, related topics on the ONS website
+          <li>Links to related content from elsewhere</li></ul>
+
+             </td>
+            </tr>
+            <tr>
+             <td>Contact us
+             </td>
+             <td><ul>
+
+          <li>Name, email address, and phone number for the statistical contact</li></ul>
+
+             </td>
+            </tr>
+          </table>
+
+<br>
+
+<h2 id="pages-in-this-collection">Pages in this collection</h2>
+      <p>Where there’s a user need, we publish a number of bulletins as a “collection”. Users can find their way between these pages using the “Pages in this collection” menu.</p>
+      <p>This list of links should:</p>
+      <ul>
+        <li>begin with the overview page
+        <li>list the most popular pages first, based on business area understanding to begin with, and using analytics later
+        <li>where it makes more sense to group some pages by topic, rather than popularity, do so (employment should be followed by unemployment, for example)</li>
+      </ul>
+
+      <p>For example, all pages in the Labour Market collection would include the following links:</p>
+        <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
+        <ul class="section-contents">
+          <li>
+            <a href="../overview">Labour market overview</a>
+          </li>
+          <li>
+            <a href="../employment">Employment</a>
+          </li>
+          <li>
+            <a href="../unemployment">Unemployment</a>
+          </li>
+          <li>
+            <a href="../average-weekly-earnings">Average weekly earnings</a>
+          </li>
+          <li>
+            <a href="#">Public and private sector employment</a>
+          </li>
+          <li>
+            <a href="#">Actual hours worked</a>
+          </li>
+          <li>
+            <a href="#">Workforce jobs</a>
+          </li>
+          <li>
+            <a href="#">Labour disputes</a>
+          </li>
+          <li>
+            <a href="#">Economic inactivity</a>
+          </li>
+          <li>
+            <a href="#">Young people in the labour market</a>
+          </li>
+          <li>
+            <a href="#">Redundancies</a>
+          </li>
+          <li>
+            <a href="#">Vacancies</a>
+          </li>
+        </ul>
+
+ <br>
