--- a/content-patterns/Bulletins-collections-articles/index.html
+++ b/content-patterns/Bulletins-collections-articles/index.html
@@ -15,7 +15,7 @@ footer: false
       <!-- sticky nav -->
       <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
         <div class="icon-box-small margin-top--3">
-          <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../collection">Return to collection page</a></p>
+          <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../content-patterns">Return to introduction page</a></p>
         </div>
         <div class="">
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
@@ -39,9 +39,6 @@ footer: false
 
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this guide:</h2>
           <ul class="section-contents">
-            <li>
-              <a href="../Introducing">Introducing Bulletin Content Patterns</a>
-            </li>
             <li>
               <a class="font-weight--bold" href="../Bulletins-collections-articles">Bulletins, collections and articles</a>
             </li>
