Completed analysis page, added links to other menus

--- a/content-patterns/Bulletins-collections-articles/index.html
+++ b/content-patterns/Bulletins-collections-articles/index.html
@@ -45,6 +45,9 @@ footer: false
             <li>
               <a href="../headings">Headings</a>
             </li>
+            <li>
+              <a href="../analysis">Analysis</a>
+            </li>
           </ul>
         </div>
       </div>
