--- a/content-patterns/content-patterns/index.html
+++ b/content-patterns/content-patterns/index.html
@@ -19,13 +19,13 @@ footer: false
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this guide:</h2>
           <ul class="section-contents">
             <li>
-              <a href="../Introducing">Introducing Bulletin Content Patterns</a>
-            </li>
-            <li>
               <a href="../Bulletins-collections-articles">Bulletins, collections and articles</a>
             </li>
             <li>
-              <a class="font-weight--bold" href="../headings">Headings</a>
+              <a href="../headings">Headings</a>
+            </li>
+            <li>
+              <a href="../analysis">Analysis</a>
             </li>
           </ul>
         </div>
