--- a/sprint/4/page-header/index.html
+++ b/sprint/4/page-header/index.html
@@ -7,7 +7,7 @@ primary-nav: false
 secondary-nav: false
 language-switch: false
 footer: false
-title: "Crime overview: year ending December 2017"
+title: "Crime overview: year ending March 2018"
 summary: "Crimes against households, adults, children, businesses and society in England and Wales."
 ---
 
@@ -79,11 +79,186 @@ summary: "Crimes against households, adults, children, businesses and society in
       <div class="col-wrap">
         <div class="col">
           <div style="display: inline-block" class="margin-bottom-sm--2 margin-bottom-md--1 border-left--matisse background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">
-            <p class="font-xsmall margin-bottom--0">This is the latest release. <a href="#" class="font-xsmall">View previous releases</a></span></p>
+            <p class="font-xsmall margin-bottom--0">This is the latest release. <a href="#" class="font-xsmall">View previous releases</a></p>
             </div>
         </div>
       </div>
     </div>
+
+    <!-- release information -->
+    <div class="">
+      <div class="wrapper">
+        <div class="col-wrap header-meta-wrap margin-bottom-sm--2 margin-bottom-md--1">
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <img class="meta__image" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="This is an accredited national statistic.">
+            <p class="font-xxsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
+          </div>
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <p class="font-xxsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
+          </div>
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <p class="font-xxsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</main>
+
+<br>
+<br>
+<br>
+
+
+<main id="main" role="main" tabindex="-1" class="prototype">
+  <!-- breadcrumb -->
+  <div id="top" class="page-neutral-intro background--astral">
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col">
+          <nav>
+            <div class="breadcrumb">
+              <ol class="breadcrumb__list margin-bottom--0">
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="#">Home</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="#">People, population and community</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="#">Crime and justice</a>
+                </li>
+                <!-- <li class="breadcrumb__item">
+                  {{ page.title }}
+                </li> -->
+              </ol>
+            </div>
+          </nav>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- blue banner -->
+  <div class="page-intro background--astral">
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col col--md-one col--lg-one">
+          <h1 class="font-color--white margin-top-md--2 margin-bottom-sm--2 margin-bottom-md--2">Crime in England and Wales: year ending December 2017</h1>
+          <p class="summary font-color--white margin-top-sm--2 margin-top-md--2 margin-bottom-sm--3 margin-bottom-md--3 font-medium">Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- latest panel  -->
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col">
+          <div style="display: inline-block" class="margin-bottom-sm--2 margin-bottom-md--1 border-left--carrot background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">
+            <p class="font-xsmall margin-bottom--0">This is not the latest release. <a href="#" class="font-xsmall">View latest release</a></p>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- release information -->
+    <div class="">
+      <div class="wrapper">
+        <div class="col-wrap header-meta-wrap margin-bottom-sm--2 margin-bottom-md--1">
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <img class="meta__image" src="{{ "/assets/img/national-statistics.png" | relative_url }}" alt="This is an accredited national statistic.">
+            <p class="font-xxsmall font-color--white"><strong>Contact:</strong><br><a href="#" class="astral-link font-weight--normal font-xxsmall"><span class="visuallyhidden">Email</span> Roger Smith</a></p>
+          </div>
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <p class="font-xxsmall font-color--white"><strong>Release date:</strong><br>14 August 2018</p>
+          </div>
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <p class="font-xxsmall font-color--white"><strong>Next release:</strong><br>To be announced</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+</main>
+
+<br>
+<br>
+<br>
+
+
+<main id="main" role="main" tabindex="-1" class="prototype">
+  <!-- breadcrumb -->
+  <div id="top" class="page-neutral-intro background--astral">
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col">
+          <nav>
+            <div class="breadcrumb">
+              <ol class="breadcrumb__list margin-bottom--0">
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="#">Home</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="#">People, population and community</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="#">Crime and justice</a>
+                </li>
+                <!-- <li class="breadcrumb__item">
+                  {{ page.title }}
+                </li> -->
+              </ol>
+            </div>
+          </nav>
+
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- blue banner -->
+  <div class="page-intro background--astral">
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col col--md-one col--lg-one">
+          <h1 class="font-color--white margin-top-md--2 margin-bottom-sm--2 margin-bottom-md--2">Crime in England and Wales: year ending September 2017</h1>
+          <p class="summary font-color--white margin-top-sm--2 margin-top-md--2 margin-bottom-sm--3 margin-bottom-md--3 font-medium">Crime against households and adults, also including data on crime experienced by children, and crimes against businesses and society.</p>
+        </div>
+      </div>
+    </div>
+
+    <!-- latest panel  -->
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col">
+          <div style="display: inline-block" class="margin-bottom-sm--2 margin-bottom-md--1 border-left--carrot background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">
+            <p class="font-xsmall margin-bottom--0">This is not the latest release. <a href="#" class="font-xsmall">View latest release</a></p>
+            </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Notice  -->
+    <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col col--lg-two-thirds">
+          <div class="margin-bottom-sm--2 margin-bottom-md--1 border-left--carrot background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">
+            <details role="group" class="margin-bottom--0 margin-top--0">
+              <summary role="button" aria-controls="details-content-0">
+                <span class="summary font-xsmall link--underline">Notice</span></summary>
+                <div id="details-content-0">
+                  <p class="margin-top--2 font-xsmall">25 January 2018</p>
+                  <p class="margin-top--2 font-xsmall">Table 2 has been amended to remove percentage change figures for the sub-categories 'Domestic Burglary' and 'Non-domestic burglary' as, due to classification changes, it is not meaningful to make comparisons between the latest figures and those from previous years.</p>
+                </div>
+              </details>
+            </div>
+        </div>
+      </div>
+    </div>
+
 
     <!-- release information -->
     <div class="">
