Created Data page, menu updates

--- a/content-patterns/Bulletins-collections-articles/index.html
+++ b/content-patterns/Bulletins-collections-articles/index.html
@@ -48,6 +48,9 @@ footer: false
             <li>
               <a href="../analysis">Analysis</a>
             </li>
+            <li>
+              <a href="../Data">Data</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -72,7 +75,7 @@ footer: false
           <tr>
            <td>An overview of the main findings, and first commentary on newly released data
            </td>
-           <td>Long-form In-depth commentary
+           <td>In-depth commentary
            </td>
           </tr>
           <tr>
