--- a/content-patterns/analysis/index.html
+++ b/content-patterns/analysis/index.html
@@ -51,6 +51,9 @@ footer: false
             <li>
               <a class="font-weight--bold" href="../analysis">Analysis</a>
             </li>
+            <li>
+              <a href="../Data">Data</a>
+            </li>
           </ul>
         </div>
       </div>
