--- a/content-patterns/content-patterns/index.html
+++ b/content-patterns/content-patterns/index.html
@@ -27,6 +27,9 @@ footer: false
             <li>
               <a href="../analysis">Analysis</a>
             </li>
+            <li>
+              <a href="../Data">Data</a>
+            </li>
           </ul>
         </div>
       </div>
@@ -34,7 +37,7 @@ footer: false
 
 
     <div class="col col--md-two-thirds col--lg-two-thirds">
-      <h1 id="section-1">Bulletin Content Patterns</h1>
+      <h1 id="Bulletin Content Patterns">Bulletin Content Patterns</h1>
       <h2 id="What these patterns are">What these patterns are</h2>
       <p>These patterns explain:</p>
       <ul>
