--- a/content-patterns/headings/index.html
+++ b/content-patterns/headings/index.html
@@ -42,6 +42,9 @@ footer: false
             <li>
               <a href="../analysis">Analysis</a>
             </li>
+            <li>
+              <a href="../Data">Data</a>
+            </li>
           </ul>
         </div>
       </div>
