Bringing typography into line with new article

--- a/sprint/4/page-header/index.html
+++ b/sprint/4/page-header/index.html
@@ -51,9 +51,9 @@ summary: "Crimes against households, adults, children, businesses and society in
                 <li class="breadcrumb__item__white">
                   <a class="breadcrumb__link astral-link" href="#">Crime and justice</a>
                 </li>
-                <!-- <li class="breadcrumb__item">
-                  {{ page.title }}
-                </li> -->
+                <li class="breadcrumb__item">
+                  Crime overview
+                </li>
               </ol>
             </div>
           </nav>
@@ -79,7 +79,7 @@ summary: "Crimes against households, adults, children, businesses and society in
       <div class="col-wrap">
         <div class="col">
           <div style="display: inline-block" class="margin-bottom-sm--2 margin-bottom-md--1 border-left--matisse background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">
-            <p class="font-xsmall margin-bottom--0">This is the latest release. <a href="#" class="font-xsmall">View previous releases</a></p>
+            <p class="font-small margin-bottom--0 margin-top--0">This is the latest release. <a href="#" class="font-small">View previous releases</a></p>
             </div>
         </div>
       </div>
@@ -129,9 +129,9 @@ summary: "Crimes against households, adults, children, businesses and society in
                 <li class="breadcrumb__item__white">
                   <a class="breadcrumb__link astral-link" href="#">Crime and justice</a>
                 </li>
-                <!-- <li class="breadcrumb__item">
-                  {{ page.title }}
-                </li> -->
+                <li class="breadcrumb__item">
+                  Crime overview
+                </li>
               </ol>
             </div>
           </nav>
@@ -207,9 +207,9 @@ summary: "Crimes against households, adults, children, businesses and society in
                 <li class="breadcrumb__item__white">
                   <a class="breadcrumb__link astral-link" href="#">Crime and justice</a>
                 </li>
-                <!-- <li class="breadcrumb__item">
-                  {{ page.title }}
-                </li> -->
+                <li class="breadcrumb__item">
+                  Crime overview
+                </li>
               </ol>
             </div>
           </nav>
