--- a/content-patterns/Bulletins-collections-articles/index.html
+++ b/content-patterns/Bulletins-collections-articles/index.html
@@ -61,10 +61,10 @@ footer: false
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1 id="Bulletins, collections and articles">Bulletins, collections and articles</h1>
       <h2 id="What is a bulletin?">What is a bulletin?</h2>
-      <p>
-      A bulletin gives headline numbers and commentary, alongside essential quality and methodology information.</p>
-      <p>
-      It should be released with new data, and clearly link to more detailed content for users who want more than an overview.</p>
+      <p>A bulletin gives headline numbers and commentary, alongside essential quality and methodology information.</p>
+      <p>It should be released with new data, and clearly link to more detailed content for users who want more than an overview.</p>
+      <p>Bulletins should focus on topics that we know users are interested in. If we know users are interested in a number of topics in a release, we can publish more than one bulletin in a "collection".</p>
+
 
       <table>
           <tr>
@@ -92,11 +92,6 @@ footer: false
           </tr>
         </table>
       <br>
-      <p>Where there's a clear user need for long, technical content, consider writing an "article". Bulletins can link to articles. Articles can be released at the same time as a bulletin
-      </p>
-      <p>
-      Bulletins should focus on topics that we know users are interested in. If we know users are interested in a number of topics in a release, we can publish more than one bulletin in a "collection".
-      </p>
 
       <h2 id="collections">Collections</h2>
 
@@ -105,8 +100,8 @@ footer: false
               A collection always contains the following things:
               </p><ul>
 
-              <li>A <strong>dataset</strong>
-              <li>A <strong>summary (bulletin)</strong> page, explaining the most important things about the new version of the dataset</li></ul>
+              <li>at least one <strong>dataset</strong>
+              <li>a <strong>summary (bulletin)</strong> page, explaining the most important things about the new data</li></ul>
 
               <p>
               Where there's a clear user need for more detail on a specific topic (gender pay gap, for example), a collection can contain additional summary pages.
